refactor(dist): remove AppCDS from the distribution runtime
WIP checkpoint preserving in-progress work: strip Application Class Data
Sharing (AppCDS) archive generation and launch wiring from DistTool, the
bundle shrink config, and StdoutIntegrity, with matching dist tests and
runtime/distribution docs updates. Unverified snapshot committed to keep
the worktree's uncommitted changes recoverable.